--- a/extensions/chrome/src/popup.html
+++ b/extensions/chrome/src/popup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stumbleable</title>
   <link rel="stylesheet" href="popup.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <script src="https://kit.fontawesome.com/4ab91c6683.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
